@@ -1,14 +1,8 @@
-DIST pl-5.7.6.tar.gz 12118598 RMD160 b9a46e9f17da0796db6b820c0e8a7079fed22842 SHA1 8a36fa6a20ccd9c27400e4eb50a1bd8b47b27b47 SHA256 455354e9908a2fa6ce658e2560ecf5e504d77d0e130c841b04b9b439b8f5272c
-DIST pl-5.7.7.tar.gz 12358491 RMD160 0061863a26e13b1135c904789211cfacb4321318 SHA1 1d547796745f60941fc7f886d19172557772927c SHA256 70f771d3c4deaccae0854fa41f9dfc2f946a6e6741d398810b2f4867e8d93194
 DIST pl-5.7.8.tar.gz 12364412 RMD160 c83d330a45196868ed401898329e725bf1b0edf1 SHA1 e0c4bee186f78104286e55fc2f28a47fb6dc60f0 SHA256 1b4bbc77cd7a9e9c1bdf79307122a565246d4858305696cd5557b471b5c349f5
 DIST pl-5.7.9.tar.gz 12366533 RMD160 a186872483ce5c8695e45c93b20204df24efcd52 SHA1 8a980a12e4a146647ae005cf74d4230b4214aba9 SHA256 df856966658cadf368b6a6517ccd4ec25d9931c6fca81d0d614b7548666dfe0a
-DIST swi-prolog-5.7.6-gentoo-patchset-0.tar.gz 5247 RMD160 e3727a37a1a66338e215c2e79c093f3bfe294cd9 SHA1 fb63a9a7d57ff422884ddf0bfb100cb7c6403c3c SHA256 9ee5e61fd79e19460d3aeea78b06e65957b7a8265a0d57d905965d723a7c9852
-DIST swi-prolog-5.7.7-gentoo-patchset-1.tar.gz 5376 RMD160 765ac23454838ea9115251d07a7c9b4eb9a39f1a SHA1 135a630f80b26ae31fd50e8f8e271859cbfc39f0 SHA256 4b613f1ec2229abfbd0d50006f5cf712f52b6ff2b7a5fcf3bf8a5dbeb1c61f6a
 DIST swi-prolog-5.7.8-gentoo-patchset-4.tar.gz 5708 RMD160 ac02c1eaadc6a4bbb23301792b9dc924755cd9d0 SHA1 fb3d2a9b71477618cf4a8e32eec88b3fe07e7e6d SHA256 1736df6bfee632bf1dd62ad0c40c61767375dfc56ceb7fb67e91ed998ad120cc
 DIST swi-prolog-5.7.9-gentoo-patchset-0.tar.gz 5656 RMD160 a57f8392ce0ee0ef115c357cc581c61e6f6bd705 SHA1 6cd212a6e7e16b587ff0098b0c3c1c81348be539 SHA256 f51fc7a027cec835a1044e1335726ef9ff2622f9cdb51e1d719b511eb3117e5b
-EBUILD swi-prolog-5.7.6.ebuild 3314 RMD160 d45591e905c005b2df905a4503cd18860b767f67 SHA1 8e5f056ecccb89b938e674957e4f0d59da230750 SHA256 cfcdbfb1972dd29f97dacdde76bc79673d0d218bc8522c69385c4d1e398acd79
-EBUILD swi-prolog-5.7.7.ebuild 3266 RMD160 da8c2e3701941b32dd91a452c26f3b6a3d6b82cf SHA1 8a9766be7e325e90427f0b69f623da3d8011825b SHA256 b0ab466d0f643867184999f2308229a44fec9bd8d440ac7d46a12dd972d181d2
 EBUILD swi-prolog-5.7.8.ebuild 3232 RMD160 d370f788fd3417a1c2d2177ee3f22dfe61cc0dab SHA1 7a56e1267f03252b3945d10849e60a2db622baae SHA256 4efeaef1e6d0c59ead21e671e8cebdcc8ed502a3354dfb894a6d2d6f52f5ab13
 EBUILD swi-prolog-5.7.9.ebuild 3232 RMD160 8fc775e9467bbd7f3e9cf027d7ce3524b142e2eb SHA1 813505015cab98aa2c742198e6be385d2c293b7c SHA256 32e21f939df86dba3cd9e13ac6d464aabe2890e561e447656484611821b8c251
-MISC ChangeLog 30622 RMD160 dc3969b5f01a1879fc51e9a391c86674ebc02f89 SHA1 da8a73a3c349c54fb82d66ada27d097793b11e1e SHA256 10e50fdde33b247eff81d8ac4260606cfe2aa583e8c36219d1e9a17af2ac879b
+MISC ChangeLog 30749 RMD160 2adb7dce8c8f35a09f6bedd1333a4e9a60baca85 SHA1 a15edec04fa256bfea9cef4bc58eb8fa1fd71626 SHA256 1028ce985376af6fadfbbbd2106f2e6825282c2ebf1e93b6f344bbb00795e974
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
